--- a/app.html
+++ b/app.html
@@ -2,6 +2,15 @@
 <html {{ HTML_ATTRS }}>
   <head>
     {{ HEAD }}
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137821445-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-137821445-1');
+    </script>
   </head>
   <body {{ BODY_ATTRS }}>
     {{ APP }}
